--- a/Homework3.Rmd
+++ b/Homework3.Rmd
@@ -19,7 +19,6 @@ library(janitor)
 library(rpart)
 library(tidymodels)
 library(nnet)
-library(scales)
 
 knitr::opts_chunk$set(cache = TRUE, 
                       warning = FALSE, 
@@ -47,9 +46,11 @@ theme_set(theme_classic())
 # Question 4
 ## Math heavy!
 
+
 # Question 5
 
-**Suppose there are several outcome variables {y1,y2,···,yM} associated with a common set of predictor variables x={x1,x2,· · ·,xn}. One could train separate single output neural networks for each outcome ymor train a single network with multiple outputs, one for each ym.What are the relative advantages/disadvantages of these two respective approaches. In what situations would one expect each to be better than the other.**
+**Suppose there are several outcome variables {y1,y2,···,yM} associated with a commonset of predictor variablesx={x1,x2,· · ·,xn}. One could train separate single output neuralnetworks for each outcome ymor train a single network with multiple outputs, one for each ym.What are the relative advantages/disadvantages of these two respective approaches. In what situations would one expect each to be better than the other.**
+
 
 
 Training Multiple Networks:
@@ -152,18 +153,18 @@ summary(fit_standard)
 
 ```
 
-As shown in the previous summaries, both results show the same Adjusted R-squared and different coefficients, standardizing the data is not always a good idea, it would depend on the statistical model to be built. 
+As shown in the previous summaries, both summaries show the same Adjusted R-squared and different coefficients, standardizing the data is not always a good idea as it statistical model be built and purppse to be used. 
+
 
 
 # Question 9
 
 
-**Spam Email. The data sets spam_stats315B_train.csv, spam_stats315B_test.csv and documentation for this problem are the same as in Homework 2 and can be found in theclass web page. You need first to standardize predictors and choose all the weights starting values at random in the interval [-0.5, 0.5].**
+**Spam Email. The data setsspam_stats315B_train.csv, spam_stats315B_test.csvand documentation for this problem are the same as in Homework 2 and can be found in theclass web page. You need first to standardize predictors and choose all the weights startingvalues at random in the interval [-0.5, 0.5].**
 
 
 # 9.0 Data Import
-
-
+## TBC!
 Loading the data files, assigning the header names and counting to check fro class imabalance.
 
 ## Data Import 
@@ -176,27 +177,20 @@ spam_train <- read_csv("spam_stats315B_train.csv",
 spam_test <- read_csv("spam_stats315B_test.csv", 
     col_names = FALSE)
 
-header_spam <- c("make", "address", "all", "3d", "our", "over", "remove",
-  "internet","order", "mail", "receive", "will",
-  "people", "report", "addresses","free", "business",
-  "email", "you", "credit", "your", "font","000","money",
-  "hp", "hpl", "george", "650", "lab", "labs",
-  "telnet", "857", "data", "415", "85", "technology", "1999",
-  "parts","pm", "direct", "cs", "meeting", "original", "project",
-  "re","edu", "table", "conference", ";", "(", "[", "!", "$", "#",
-  "CAPAVE", "CAPMAX", "CAPTOT","type")
+header_spam<-c("make", "address", "all", "3d", "our", "over", "remove","internet","order", "mail", "receive", "will","people", "report", "addresses","free", "business","email", "you", "credit", "your", "font","000","money","hp", "hpl", "george", "650", "lab", "labs","telnet", "857", "data", "415", "85", "technology", "1999","parts","pm", "direct", "cs", "meeting", "original", "project","re","edu", "table", "conference", ";", "(", "[", "!", "$", "#","CAPAVE", "CAPMAX", "CAPTOT","type")
 
 colnames(spam_train) <- header_spam
 colnames(spam_test) <- header_spam
 
-# Checking for class imbalance 
+# Checking if there is class imbalance in the response. 
 spam_train %>% 
   count(type)
 
 
 ```
 
-## Accuracy Functions 
+
+
 
 ```{r}
 
@@ -210,10 +204,15 @@ pct_accuracy <- function(y_hat, y_test, threshold){
   return(pct_accurate)
 }
 
-# Missclasification RAtes - Missed in previous HWs
+
+
+
+#returns missclasification rates for overall and each class for a given threshold
+
+
 get_misclassification_rates <- function(model, threshold){
   
-  y_hat <- predict(model, spam_test_proc)
+  y_hat <- predict(model, test_scaled_X)
   y_hat[y_hat >  threshold] <- 1
   y_hat[y_hat <= threshold] <- 0
     
@@ -234,64 +233,52 @@ get_misclassification_rates <- function(model, threshold){
 }
 
 
+
 ```
 
 
-## Pre-Processing 
 
-Scaling the data using tidymodels and splitting into training and testing set. Included an example of data pre-processed. 
+
+## Pre-Processing
 
 ```{r}
 set.seed(415)
-
 # Scaling Data using Tidymodels
 spam_train_rec <- recipe(type ~ ., data = spam_train) %>%
-  step_scale(all_predictors()) %>% # Normaliing the data
-  step_zv(all_predictors()) %>% # Eliminating Varibales with zero variance
+  step_scale(all_predictors()) %>%
+  step_zv(all_predictors()) %>%
   prep(retain = TRUE)
 
 
-```
+spam_train_proc <- bake(spam_train_rec, new_data = spam_train) %>% select(-type)
+spam_test_proc <- bake(spam_train_rec, new_data = spam_test) %>% select(-type)
 
-## Data Split
-
-``` {r}
-# Response label
-y_test <- spam_test %>% 
-  select(type)
-y_train <- spam_train %>% 
-  select(type)
-
-# Splitting  data
-spam_train_proc <- bake(spam_train_rec, new_data = spam_train) %>% 
-  select(-type)
-spam_test_proc <- bake(spam_train_rec, new_data = spam_test) %>% 
-  select(-type)
-
-head(spam_train_proc, 10)
+y_test <- spam_test_proc %>% select(type)
+y_train <- spam_train_proc %>% select(type)
 
 ```
 
 
 **(a) Fit on the training set one hidden layer neural networks with 1, 2,..., 10 hidden units and different sets of starting values for the weights (obtain in this way one model for each number of units). Which structural model performs best at classifying on the test set?**
 
-## First Model - Hidden Neural Layers
+
+## To be debugged!
 
 ```{r}
-set.seed(415)
 
 # Parameters
 num_neurons <- seq(1:10)
-num_reps <- 10
-wt_rang = 0.3
-threshold <- 0.5
+num_reps <- 5
+wt_rang = 0.5
+threshold <- .5
 accuracies <- c()
+
 
 
 for(size in num_neurons){
   sum_accuracy <- 0
     
-  
+  #average accuracy over num_reps random initializations
   for(i in c(1:num_reps)){
     
     set.seed(415)
@@ -312,165 +299,25 @@ for(size in num_neurons){
 
 
 #get the num_neurons corresponding with model that produced highest average accuracy
-best_performing <- which.max(accuracies)
-best_num_neurons <- num_neurons[best_performing]
-
-```
-
-The best number of hidden layer neurons is `r best_num_neurons` which provides an accuracy of `r scales::percent(accuracies[best_performing])` in the testing set. 
-
-**(b) Choose the optimal regularization (weight decay for parameters 0,0.1,...,1) for the structural model found above by averaging your estimators of the misclassification error on the test set. The average should be over 10 runs with different starting values. Describe your final best model obtained from the tuning process: number of hidden units and the corresponding value of the regularization parameter. What is an estimation of the misclassification error of your model?**
-
-## Second Model - Weight Decays
-
-```{r}
-set.seed(415)
-
-# Parameters
-decays <- seq(0, 1, .1) # Adding weight decay (0.1, 1)
-num_neurons <- seq(1:10) # Same layer as before
-num_reps <- 10
-wt_rang = 0.5
-threshold <- 0.5
-accuracies <- c()
-
-
-for(decay in decays){
-  sum_accuracy <- 0
-    
-  
-  for(i in c(1:num_reps)){
-    
-    set.seed(415)
-    
-    model <- nnet(
-        spam_train_proc, y_train, size=best_num_neurons,
-        linout = FALSE,  softmax = FALSE,
-        censored = FALSE, skip = FALSE, rang = wt_rang, decay = decay ,
-        maxit = 100, Hess = FALSE, trace = FALSE
-    )
-    
-    y_hat <- predict(model, spam_test_proc)
-    sum_accuracy <- sum_accuracy + pct_accuracy(y_hat, y_test, threshold)
-  }
-  
-  accuracies <- c(accuracies, sum_accuracy/num_reps)
-}
+best_performing_idx <- which.max(accuracies)
+best_performing_num_neurons <- num_neurons[best_performing_idx]
+best2_performing_idx <- which.max(accuracies[accuracies!=max(accuracies)])
+best2_performing_num_neurons <- num_neurons[best2_performing_idx]
 
 
 
-# Highest average accuracy by neuron and decay. 
-best_performing <- which.max(accuracies)
+library(scales)
+#Report output
+cat("Best performing number of hidden layer neurons: ", 
+    best_performing_num_neurons, "\n",
+    "Accuracy: ",
+    scales::percent(accuracies[best_performing_idx]),"\n")
 
-best_decay <- decays[best_performing]
+cat("2nd best performing number of hidden layer neurons: ", 
+    best2_performing_num_neurons, "\n",
+    "Accuracy: ",
+    scales::percent(accuracies[best2_performing_idx]),"\n")
 
 
 ```
-
-The best performing model is achieved using `r best_decay` as the best weight decay. 
-
-**Missclasification rate using both parameters Number of Neurons and Weight Decay.**
-
-```{r}
-
-#get misclassification rates for our best chosen parameters
-
-model <- nnet(
-    spam_train_proc, y_train, size= best_num_neurons,
-    linout = FALSE, entropy = FALSE, softmax = FALSE,
-    censored = FALSE, skip = FALSE, rang = wt_rang, decay = best_decay,
-    maxit = 100, Hess = FALSE, trace = FALSE
-)
-misclassification_rates <- get_misclassification_rates(model, threshold)
-
-
-```
-
-Best Weight Decay: `r best_decay`
-
-Best Number of Layer Neurons: `r best_num_neurons`
-
-Missclasification rate of the model: `r scales::percent(misclassification_rates[1])` 
-
-Spam misscalsification rate: `r scales::percent(misclassification_rates[2])`
-
-Ham Missclasification Rate: `r scales::percent(misclassification_rates[3])`
-
-
-**(c) As in the previous homework the goal now is to obtain a spamfilter. Repeat the previouspoint requiring this time the proportion of misclassified good emails to be less than 1%.**
-
-
-
-
-```{r, }
-set.seed(415)
-#for a given model
-find_threshold <- function(model){
-  
-  thresholds <- seq(0,1,0.01)
-  y_hat <- predict(model, spam_test_proc)
-  
-  for(thresh in thresholds){
-    y_hat_nonspam <- y_hat[y_test == 0]
-    y_hat_nonspam[y_hat_nonspam >  thresh] <- 1
-    y_hat_nonspam[y_hat_nonspam <= thresh] <- 0
-    nonspam_misclassification_rate <- sum(y_hat_nonspam)/length(y_hat_nonspam)
-    
-    if(nonspam_misclassification_rate <= 0.01) {break}
-  }
-  return(thresh)
-}
-
-
-# parameters
-num_neurons <- seq(1:10)
-weight_decays <- seq(0,1,.1)
-wt_rang = 0.5
-
-#fitting the modee to specified parameters
-models <- list()
-
-for(i in c(1:length(num_neurons))){
-  for(j in c(1:length(decays))){
-    
-      model <- nnet(
-        spam_train_proc, y_train, size=num_neurons[i],
-        linout = FALSE, entropy = FALSE, softmax = FALSE,
-        censored = FALSE, skip = FALSE, rang = wt_rang, decay = decays[j],
-        maxit = 100, Hess = FALSE, trace = FALSE
-    )
-    models[[paste(i,j,sep="_")]] <- model
-  }
-}
-
-# < 1% nonspam misclassification rate for each model
-model_thresholds <- lapply(models, function(x) {find_threshold(x)})
-
-#get the overall, spam, and non-spam misclassification rates at each threshold
-misclassification_rates <- mapply(get_misclassification_rates, models, model_thresholds)
-
-#find the model with the lowest overall misclassification rate 
-
-#(using forced < 1% nonspam threshold)
-best_model_idx <- which.min(misclassification_rates[1,])
-best_model <- models[[best_model_idx]]
-best_misclassification_rates <- misclassification_rates[,best_model_idx]
-
-```
-
-Reporting on the best neural net model:
-
-Best model accuracy for Ham emails: (< 1% missclasification)
-
-Hidden layer neurons: `r best_model$n[2]`
-Weight Decay: `r best_model$decay`
-
-Overall Missclasification Rate: `r scales::percent(best_misclassification_rates[1])`
-
-Spam Email Missclasification Rate: `r scales::percent(best_misclassification_rates[2])`
-
-Ham Email Missclasification Rate: `r scales::percent(best_misclassification_rates[3])`
-
-
-
 
